--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,6 @@
   <title>MeCCG Map App</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.png">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script>
     var xhrObj = new XMLHttpRequest();
     xhrObj.open('GET', '/assets/data/cards_all.js', false);
@@ -18,8 +15,9 @@
     se.text = xhrObj.responseText;
     document.getElementsByTagName('head')[0].appendChild(se);
   </script>
+  <link rel="manifest" href="manifest.json" />
 </head>
-<body class="mat-typography">
-  <app-root></app-root>
+<body>
+  <app-root class="app-root"></app-root>
 </body>
 </html>
